--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-size: 20px;
     max-width: 800px;
     text-align: justify;
-    margin-left: 20%;
+    margin-left: 20%;margin-right: 20%;
     margin-top: 3%;
 	}
 h1 {font-size: 24px;
